update searching without product-title